--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,80 @@ site_name: Hoshino_pb's Blog
 copyright: Copyright &copy; 2024 <a href="https://github.com/Hoshinopb"  target="_blank" rel="noopener">Hoshinopb</a>
 theme:
   name: material
+  language: 'zh'
+  features:
+    - navigation.tabs # 一级导航在横着的导航栏
+    - content.code.annotate # 可以在代码块中增添点击展示的注释，参见 https://squidfunk.github.io/mkdocs-material/reference/code-blocks/#adding-annotations
+    # - navigation.tracking # 地址栏中的 URL 会随当前位置变化为对应小节的 URL
+    - navigation.indexes # 将 index 页面直接附到小节名上
+    - navigation.top # 回到顶部按钮
+    # - navigation.sections # 二级导航是粗体
+    # - navigation.expand # 导航默认展开
+    - toc.follow # toc 跟随
+    # - toc.integrate # 文档 toc 集成到总目录中 
+  palette:
+    # Toggle light mode
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch
+        name: 切换为暗色
+    # Toggle dark mode
+    - scheme: slate
+      primary: blue
+      accent: blue
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: 切换为亮色
+markdown_extensions:
+  - toc:
+      permalink: true
+  - pymdownx.highlight:
+      linenums: true
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+extra_css:
+  - 'from_oi_wiki/css/extra.css?v=13'
+  - css/status.css
+  - css/neoteroi-mkdocs.css
+extra_javascript:
+  - 'from_oi_wiki/js/extra.js'
+  - js/mathjax.js # 支持数学公式，ref : https://squidfunk.github.io/mkdocs-material/reference/mathjax
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js # 支持表格排序
+  - js/tablesort.js
+
+font:
+  text: LXGW WenKai Screen
+  code: JetBrains Mono
+plugins:
+  - search:
+      separator: '[\s\u200b\-]'
+      jieba_dict: dict.txt.big
+nav:
+  - 主页: 
+    - 主页: index.md
+    - 关于我: about.md
+  - 编程:
+    - C++: 
+      - 简介: Tutorial/Cpp/C++.md
+      - 编程范式: Tutorial/Cpp/c1.md
+      - 面向对象程序设计: Tutorial/Cpp/c2.md
+    - Python: Tutorial/python.md
+  - CTF:
+    - 简介: CTF/index.md
+    - Web: 
+      - 笔记: CTF/web/web.md
+    - Pwn:
+      - 软件安全lab: CTF/pwn/pwn.md
+  - 课程笔记:
+    - 计算机系统: note/sysII.md
+    - ADS: note/ads.md
+    - 软件安全: note/softsafe.md
+    - 密码学基础与数据安全: 
+      - 引入: note/cyp/cyp.md
+      - 可证明安全: note/cyp/cyp1.md
